<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_detalhe_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:clickable="false"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp"
                android:foreground="?attr/selectableItemBackground" >

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/frameLayout">

                        <ProgressBar
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/pb_card0_frdetalheposto"
                            android:layout_gravity="center" />

                        <ImageView

                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/icIdBadeira_card0_frdetalheposto"
                            android:layout_gravity="center_horizontal|top" />


                    </FrameLayout>

                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:id="@+id/tvCidade_card0_frdetalheposto"
                        android:textSize="18dp"
                        android:textStyle="normal"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/frameLayout"
                        android:text="@string/cidade_textview" />
                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvRua_card0_frdetalheposto"
                        android:textSize="18dp"
                        android:textStyle="normal"
                        android:layout_toRightOf="@+id/frameLayout"
                        android:layout_alignParentBottom="true"
                        android:text="@string/rua_textview" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:id="@+id/tvNome_card0_frdetalheposto"
                        android:textSize="18dp"
                        android:textStyle="normal"
                        android:text="@string/nome_textview"

                        android:layout_toRightOf="@+id/tvCidade_card0_frdetalheposto"
                        android:layout_toEndOf="@+id/tvCidade_card0_frdetalheposto" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_detalhe_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:clickable="false"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp"
                android:foreground="?attr/selectableItemBackground" >

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center" >

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cidade_cachoeirinha"
                            android:id="@+id/rb_cachoeirinha_card1_frndetalheposto"
                            android:checked="false" />


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cidade_gravatai"
                            android:id="@+id/rb_gravatai_card1_frdetalheposto"
                            android:checked="false" />

                    </RadioGroup>
                </RadioGroup>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_detalhe_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:clickable="false"

                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp"
                android:foreground="?attr/selectableItemBackground" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:weightSum="1"
                    android:gravity="center_horizontal">

                    <CheckBox

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cbLavagem"
                        android:id="@+id/cbLavagem_card2_frdetalheposto" />
                    <CheckBox

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb24h"
                        android:id="@+id/cb24_card2_frdetalheposto" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cbOleo"
                        android:id="@+id/cbOleo_card2_frdetalheposto" />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cbConveniencia"
                        android:id="@+id/cbCoveniencia_card2_frdetalheposto" />

                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:id="@+id/cardview_detalhe_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:clickable="false"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp"
                android:foreground="?attr/selectableItemBackground" >


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/valor_comumTextview"
                        android:id="@+id/tvComum_card3_frdetalheposto" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/valor_adtivadaTextview"
                        android:id="@+id/tvAditivada_card3_frdetalheposto" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/valor_premiumTextview"
                        android:id="@+id/tvPremium_card3_frdetalheposto" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/valor_etanolTextview"
                        android:id="@+id/tvEtanol_card3_frdetalheposto" />


                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:text="@string/valor_dieselTextview"
                        android:id="@+id/tvDiesel_card3_frdetalheposto" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_detalhe_4_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:clickable="false"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp"
                android:foreground="?attr/selectableItemBackground" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                        </TableRow>

                    </TableLayout>
                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="27dp"
                        android:text="@string/latitude_textview"
                        android:id="@+id/tvLatitude_card4_frdetalheposto" />
                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:text="@string/longitude_textview"
                        android:id="@+id/tvLongitude_card4_frdetalheposto" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="337dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:weightSum="1">



                        <fragment
                            android:id="@+id/map"
                            class="com.google.android.gms.maps.SupportMapFragment"
                            xmlns:tools="http://schemas.android.com/tools"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="12dp"
                            tools:context="aulas.ddmi.webservice_carros.control.DetalheCarroFragment" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>