<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_adapterpostos"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="6dp"
    android:clickable="true"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/frameLayout">

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pb_card0_frdetalheposto"
                android:layout_gravity="center" />

            <ImageView

                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/icIdBadeira"
                android:layout_gravity="center_horizontal|top" />


        </FrameLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNome"
            android:textSize="18dp"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/frameLayout"
            android:text="@string/nome_textview" />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvRua"
            android:textSize="18dp"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:layout_toRightOf="@+id/frameLayout"
            android:layout_alignParentBottom="true"
            android:text="@string/rua_textview" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/tvCombustivel"
            android:textSize="18dp"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:text="@string/combustivel_textview"
            android:layout_toRightOf="@+id/tvNome"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/tvPreco"
            android:textSize="18dp"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:text="@string/preco_textview"
            android:layout_toRightOf="@+id/tvCombustivel"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>

